# CVAT-Dataset-Converter-Toolkit

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  app.py  cli.py  config.py  cvat_parser.py  jobs.py  lifespan.py  tickets.py
backend/frontend/: index.html
backend/frontend/css/: styles.css
backend/frontend/js/: api.js  app.js  config.js  dom.js
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  config.js  dom.js  session.js
